--- a/Django/Html/AllRingsPage.html
+++ b/Django/Html/AllRingsPage.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Ring Explorer</title>
+    <title>All Rings</title>
 
-    <meta name="description" content="Prototype Ring Explorer">
+    <meta name="description" content="Prototype Ring Explorer: All Rings">
     <meta name="author" content="Harnick Khera - Hephyrius">
 
     <link href="css/bootstrap.css" rel="stylesheet">
