--- a/Django/Html/RingPage.html
+++ b/Django/Html/RingPage.html
@@ -42,6 +42,10 @@
 							<td>0</td>
 						</tr>
 						<tr>
+						  <th>Transaction Hash</th>
+							<td>0</td>
+						</tr>
+						<tr>
 						  <th>Chain</th>
 							<td>Ethereum</td>
 						</tr>
